--- a/integradora/package.json
+++ b/integradora/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node /node_js/server.js"
+    "start": "node node_js/server.js"
 
   },
   "keywords": [],
