--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-
   },
   "keywords": [],
   "author": "",
@@ -15,6 +14,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mysql2": "^3.11.3"
   }
 }
