--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "mysql2": "^3.11.3"
-  }
+  "body-parser": "^1.20.3",
+  "cors": "^2.8.5",
+  "express": "^4.21.1",
+  "mysql2": "^3.11.3",
+  "express-session": "^1.17.3"
 }
+
+}
+
